split: remove legacy source assumptions from implementation templates

--- a/.context-engineering/governance.yml
+++ b/.context-engineering/governance.yml
@@ -1,12 +1,12 @@
 schema_version: "1.0"
-repository: "Josh-Phillips-LLC/Context-Engineering"
+repository: "Josh-Phillips-LLC/context-engineering-implementation"
 
 governance:
-  owner_system: "Context-Engineering"
-  owner_repo: "Josh-Phillips-LLC/Context-Engineering"
+  owner_system: "Context-Engineering-Governance"
+  owner_repo: "Josh-Phillips-LLC/context-engineering-governance"
   state: "governed"
-  registry_ref: "00-os/governed-repos.yml"
-  policy_ref: "governance.md#repository-governance-adoption-model-ownership-states"
+  registry_ref: "https://github.com/Josh-Phillips-LLC/context-engineering-governance/blob/main/00-os/governed-repos.yml"
+  policy_ref: "https://github.com/Josh-Phillips-LLC/context-engineering-governance/blob/main/governance.md#repository-governance-adoption-model-ownership-states"
 
 controls:
   profile: "governed"
@@ -15,6 +15,6 @@ controls:
     - "Executive Sponsor (protected changes)"
 
 evidence:
-  adoption_issue: "https://github.com/Josh-Phillips-LLC/Context-Engineering/issues/16"
+  adoption_issue: "https://github.com/Josh-Phillips-LLC/context-engineering-governance/issues/2"
 
-last_reviewed_utc: "2026-02-25T00:00:00Z"
+last_reviewed_utc: "2026-02-27T00:00:00Z"
