--- a/00-os/governed-repos.yml
+++ b/00-os/governed-repos.yml
@@ -6,7 +6,7 @@
 
 metadata:
   version: "1.0"
-  last_updated: "2026-02-25"
+  last_updated: "2026-02-27"
   canonical_source: "00-os/governed-repos.yml"
   governing_policy_ref: "governance.md#repository-governance-adoption-model-ownership-states"
 
@@ -19,12 +19,30 @@ state_model:
     description: "Repository is fully governed and must satisfy governed controls."
 
 repositories:
-  - repo: "Josh-Phillips-LLC/Context-Engineering"
+  - repo: "Josh-Phillips-LLC/context-engineering-governance"
     family: "context-engineering-core"
     state: "governed"
     owner_role: "AI Governance Manager"
     marker_path: ".context-engineering/governance.yml"
-    notes: "Canonical governance source repository."
+    adoption_issue: "https://github.com/Josh-Phillips-LLC/context-engineering-governance/issues/2"
+    notes: "Canonical governance authority repository after ADR 0002 split."
+
+  - repo: "Josh-Phillips-LLC/context-engineering-implementation"
+    family: "context-engineering-core"
+    state: "governed"
+    owner_role: "AI Governance Manager"
+    marker_path: ".context-engineering/governance.yml"
+    adoption_issue: "https://github.com/Josh-Phillips-LLC/context-engineering-governance/issues/2"
+    notes: "Canonical execution/tooling repository after ADR 0002 split."
+
+  - repo: "Josh-Phillips-LLC/Context-Engineering"
+    family: "context-engineering-core-legacy"
+    state: "transition"
+    owner_role: "AI Governance Manager"
+    marker_path: ".context-engineering/governance.yml"
+    adoption_issue: "https://github.com/Josh-Phillips-LLC/context-engineering-governance/issues/2"
+    transition_controls_pr: "https://github.com/Josh-Phillips-LLC/Context-Engineering/pull/92"
+    notes: "Legacy mixed-layout transition repository retained for emergency fallback and migration records only."
 
   - repo: "Josh-Phillips-LLC/context-engineering-role-compliance-officer"
     family: "context-engineering-role-repos"
